; ModuleID = '/home/carl/AnghaBench/linux/drivers/dma/ti/extr_cppi41.c_deinit_cppi41.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/dma/ti/extr_cppi41.c_deinit_cppi41.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.cppi41_dd = type { i32, i32, i64 }

@QMGR_LRAM0_BASE = common dso_local global i64 0, align 8
@QMGR_SCRATCH_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, %struct.cppi41_dd*)* @deinit_cppi41 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @deinit_cppi41(%struct.device* %0, %struct.cppi41_dd* %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca %struct.cppi41_dd*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store %struct.cppi41_dd* %1, %struct.cppi41_dd** %4, align 8
  %5 = load %struct.cppi41_dd*, %struct.cppi41_dd** %4, align 8
  %6 = call i32 @disable_sched(%struct.cppi41_dd* %5)
  %7 = load %struct.device*, %struct.device** %3, align 8
  %8 = load %struct.cppi41_dd*, %struct.cppi41_dd** %4, align 8
  %9 = call i32 @purge_descs(%struct.device* %7, %struct.cppi41_dd* %8)
  %10 = load %struct.cppi41_dd*, %struct.cppi41_dd** %4, align 8
  %11 = getelementptr inbounds %struct.cppi41_dd, %struct.cppi41_dd* %10, i32 0, i32 2
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @QMGR_LRAM0_BASE, align 8
  %14 = add nsw i64 %12, %13
  %15 = call i32 @cppi_writel(i32 0, i64 %14)
  %16 = load %struct.cppi41_dd*, %struct.cppi41_dd** %4, align 8
  %17 = getelementptr inbounds %struct.cppi41_dd, %struct.cppi41_dd* %16, i32 0, i32 2
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @QMGR_LRAM0_BASE, align 8
  %20 = add nsw i64 %18, %19
  %21 = call i32 @cppi_writel(i32 0, i64 %20)
  %22 = load %struct.device*, %struct.device** %3, align 8
  %23 = load i32, i32* @QMGR_SCRATCH_SIZE, align 4
  %24 = load %struct.cppi41_dd*, %struct.cppi41_dd** %4, align 8
  %25 = getelementptr inbounds %struct.cppi41_dd, %struct.cppi41_dd* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.cppi41_dd*, %struct.cppi41_dd** %4, align 8
  %28 = getelementptr inbounds %struct.cppi41_dd, %struct.cppi41_dd* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = call i32 @dma_free_coherent(%struct.device* %22, i32 %23, i32 %26, i32 %29)
  ret void
}

declare dso_local i32 @disable_sched(%struct.cppi41_dd*) #1

declare dso_local i32 @purge_descs(%struct.device*, %struct.cppi41_dd*) #1

declare dso_local i32 @cppi_writel(i32, i64) #1

declare dso_local i32 @dma_free_coherent(%struct.device*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
